fix for gateway timeout issue #187

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,7 @@ server {
         uwsgi_param  SERVER_NAME        $server_name;
 
         uwsgi_pass 127.0.0.1:8888;
+        uwsgi_read_timeout 600; #this is extremely long (10min) but may be needed for large files or slow systems
     }
 
     # You may need this to prevent return 404 recursion.
